--- a/frontend/cyto-map/src/app/auth/login/login.component.html
+++ b/frontend/cyto-map/src/app/auth/login/login.component.html
@@ -1,13 +1,12 @@
 <div class="row">
     <div class="col-xs-12">
-        <div class="alert alert-danger" *ngIf="error">
-            <p>{{ error }}</p>
-        </div>
-        <div *ngIf="isLoading" style="text-align: center;">
-            <app-loading-spinner></app-loading-spinner>
-        </div>
+        @if(error){
+            <div class="alert alert-danger">
+                <p>{{ error }}</p>
+            </div>
+        }
         @if(!isLoading) {
-            <form (ngSubmit)="onLogin()">
+            <form #loginForm="ngForm" (ngSubmit)="onLogin()">
                 <div class="form-group">
                     <label for="email">E-Mail</label>
                     <input 
@@ -43,6 +42,5 @@
                 <app-loading-spinner></app-loading-spinner>
             </div>
         }
-        
     </div>
 </div>
