--- a/frontend/cyto-map/src/app/auth/register/register.component.html
+++ b/frontend/cyto-map/src/app/auth/register/register.component.html
@@ -1,1 +1,47 @@
-<p>register works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form #registerForm="ngForm" (ngSubmit)="onRegisterNewUser()">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input 
+                    type="text" 
+                    id="name" 
+                    class="form-control"
+                    [(ngModel)]="name"
+                    name="name"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="email">E-Mail</label>
+                <input 
+                    type="email" 
+                    id="email" 
+                    class="form-control"
+                    [(ngModel)]="email"
+                    name="email"
+                    required
+                    email>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input 
+                    type="password" 
+                    id="password" 
+                    class="form-control"
+                    [(ngModel)]="password"
+                    name="password"
+                    required
+                    minlength="6">
+            </div>
+            <div>
+                <button class="btn btn-success" [disabled]="!registerForm.valid">Register</button>
+
+            </div>
+            <br>
+            <div>
+                <p>Already have an Account?</p>
+                <button class="btn btn-primary" (click)="onSignIn()">Sign-in</button>
+            </div>
+        </form>
+    </div>
+</div>
