--- a/frontend/cyto-map/src/app/navbar/navbar.component.html
+++ b/frontend/cyto-map/src/app/navbar/navbar.component.html
@@ -13,6 +13,16 @@
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/marketshare']">Market Share</a>
           </li>
         </ul>
+          @if(isAuthenticated){
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item ms-auto">
+                <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="/profile">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/login" (click)="onSignOut()">Sign Out</a>
+              </li>
+            </ul>
+          }
       </div>
     </div>
   </nav>
