--- a/frontend/cyto-map/src/app/auth/user-profile/access-tokens/access-tokens.component.html
+++ b/frontend/cyto-map/src/app/auth/user-profile/access-tokens/access-tokens.component.html
@@ -8,6 +8,7 @@
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Token</th>
+                <th scope="col">Created</th>
                 <th scope="col">Expires</th>
                 <th scope="col">Revoke</th>
                 <th scope="col">Delete</th>
