--- a/frontend/cyto-map/src/app/network-map/network-map.component.html
+++ b/frontend/cyto-map/src/app/network-map/network-map.component.html
@@ -5,3 +5,8 @@
         <button type="button" class="btn btn-primary" (click)="onLoadNetworkMap()">Load</button>
     </div>
 </div>
+<br>
+<br>
+<div class="row">
+    <app-network-map-view></app-network-map-view>
+</div>
