--- a/frontend/cyto-map/src/app/network-map/network-map-view/network-map-view.component.html
+++ b/frontend/cyto-map/src/app/network-map/network-map-view/network-map-view.component.html
@@ -1,3 +1,6 @@
 <div class="row">
-    <div id="cy"></div>
+    <div id="cy-container">
+        <app-node-edge-select></app-node-edge-select>
+        <div id="cy"></div>
+    </div>
 </div>
