--- a/frontend/cyto-map/src/app/network-map/network-map-view/network-map-view.component.scss
+++ b/frontend/cyto-map/src/app/network-map/network-map-view/network-map-view.component.scss
@@ -1,4 +1,19 @@
+#cy-container {
+    position: relative;
+    width: 100%;
+    height: 1000px;
+}
+
 #cy {
     width: 100%;
-    height: 800px;
+    height: 100%;
+}
+
+app-node-edge-select {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    z-index: 10;
+    background-color: white;
+    padding: 5px;
 }
