--- a/frontend/cyto-map/src/app/network-map/network-map-view/node-edge-select/node-edge-select.component.html
+++ b/frontend/cyto-map/src/app/network-map/network-map-view/node-edge-select/node-edge-select.component.html
@@ -6,9 +6,7 @@
 
     <!-- Collapsible rectangle -->
     <div class="collapsible-rectangle" [ngClass]="{ 'expanded': isExpanded }">
-        <!-- Your content goes here -->
-        <p>Select your nodes and edges here.</p>
-        <!-- Add more content as needed -->
+        <app-nodes></app-nodes>
     </div>
 </div>
 
